--- a/Final Deliverables/Model building/Save_the_Model.ipynb
+++ b/Final Deliverables/Model building/Save_the_Model.ipynb
@@ -622,12 +622,12 @@
     {
       "cell_type": "code",
       "source": [
-        "#Importing the ImageDataGenerator Library\n"
+        "#Importing the ImageDataGenerator Library"
       ],
       "metadata": {
-        "id": "-dmrhuIC4UFZ"
+        "id": "Ur7CofnsSh4z"
       },
-      "execution_count": 21,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -637,9 +637,9 @@
         "from keras.preprocessing.image import ImageDataGenerator"
       ],
       "metadata": {
-        "id": "Ayw07eU24UTw"
+        "id": "RlEqS3GISiTE"
       },
-      "execution_count": 22,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -648,9 +648,9 @@
         "#Define the parameters/arguments for ImageDataGenerator class"
       ],
       "metadata": {
-        "id": "B3xib35W5kAb"
+        "id": "0n_pJydTSizL"
       },
-      "execution_count": 23,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -667,9 +667,9 @@
         "test_datagen = ImageDataGenerator(rescale=1./255)"
       ],
       "metadata": {
-        "id": "b_Lzpoqv5kFH"
+        "id": "EvSv756FSi4m"
       },
-      "execution_count": 24,
+      "execution_count": 95,
       "outputs": []
     },
     {
@@ -678,9 +678,9 @@
         "#Applying ImageDataGenerator functionality to trainset"
       ],
       "metadata": {
-        "id": "UoS3NA-Z5kLb"
+        "id": "ArkgdWdaSi9k"
       },
-      "execution_count": 25,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -693,10 +693,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "m5l__dCr5kRD",
-        "outputId": "a5abf702-b09b-46dd-d1d3-b6df9a05de17"
+        "id": "CNdj5YRzSjDt",
+        "outputId": "43014755-bddf-4e1f-9f69-a0a0194f1abf"
       },
-      "execution_count": 26,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,9 +713,9 @@
         "#Applying ImageDataGenerator functionality to testset"
       ],
       "metadata": {
-        "id": "IpF6ylJX72Zq"
+        "id": "BBVWoDeFSjIs"
       },
-      "execution_count": 35,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -728,10 +728,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "FeqHwrYf754s",
-        "outputId": "4a901be7-f063-48c0-80d7-cc0ea4200f2a"
+        "id": "C9dJqOGqSjNH",
+        "outputId": "bc45308b-d78a-4062-fa1f-6e25d3dff9bc"
       },
-      "execution_count": 36,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,9 +748,9 @@
         "#importing the model building libraries"
       ],
       "metadata": {
-        "id": "XMdMw9i15kX4"
+        "id": "wOcwKLTnSjR7"
       },
-      "execution_count": 27,
+      "execution_count": 101,
       "outputs": []
     },
     {
@@ -770,9 +770,9 @@
         "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
-        "id": "Y9OxK7hB5kd4"
+        "id": "aiXUmkM2TC6c"
       },
-      "execution_count": 28,
+      "execution_count": 102,
       "outputs": []
     },
     {
@@ -782,9 +782,9 @@
         "model=Sequential()"
       ],
       "metadata": {
-        "id": "QF5FVc0i8tJE"
+        "id": "eEWhXYAGTH8R"
       },
-      "execution_count": 37,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -793,9 +793,9 @@
         "#Adding CNN layers"
       ],
       "metadata": {
-        "id": "q1Yalhme9aBi"
+        "id": "Iv6bHvWKTIDz"
       },
-      "execution_count": 38,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -809,9 +809,9 @@
         "model.add(Flatten())"
       ],
       "metadata": {
-        "id": "CjM0D3YD9gS6"
+        "id": "mT5Pk3PoTDIo"
       },
-      "execution_count": null,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -820,9 +820,9 @@
         "#Adding Dense Layers"
       ],
       "metadata": {
-        "id": "HM6Fhwjn9ieU"
+        "id": "pyDX9IAfTQRT"
       },
-      "execution_count": 39,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -834,9 +834,9 @@
         "model.add(Dense(1,activation='sigmoid'))"
       ],
       "metadata": {
-        "id": "9NpJDDIt9m_d"
+        "id": "1pLG3aj0TQle"
       },
-      "execution_count": 40,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -846,10 +846,63 @@
         "model.compile(loss='binary_crossentropy',optimizer=\"adam\",metrics=[\"accuracy\"])"
       ],
       "metadata": {
-        "id": "I0MMwUFh9nfK"
+        "id": "7qq7OVFvTUpk"
       },
-      "execution_count": 41,
+      "execution_count": 108,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Training the model\n",
+        "model.fit_generator(x_train,steps_per_epoch=14,epochs=10,validation_data=x_test,validation_steps=4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DnymZ0EyTUxu",
+        "outputId": "d2b8daf5-1fee-4e16-cfea-05ac8bd2cd93"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "14/14 [==============================] - 29s 2s/step - loss: 2.8172 - accuracy: 0.5940 - val_loss: 1.0314 - val_accuracy: 0.8512\n",
+            "Epoch 2/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.6690 - accuracy: 0.8142 - val_loss: 0.5207 - val_accuracy: 0.8512\n",
+            "Epoch 3/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.3154 - accuracy: 0.8670 - val_loss: 0.1986 - val_accuracy: 0.9174\n",
+            "Epoch 4/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.2728 - accuracy: 0.8922 - val_loss: 0.1368 - val_accuracy: 0.9504\n",
+            "Epoch 5/10\n",
+            "14/14 [==============================] - 27s 2s/step - loss: 0.2250 - accuracy: 0.9060 - val_loss: 0.0822 - val_accuracy: 0.9752\n",
+            "Epoch 6/10\n",
+            "14/14 [==============================] - 27s 2s/step - loss: 0.1931 - accuracy: 0.9358 - val_loss: 0.1092 - val_accuracy: 0.9669\n",
+            "Epoch 7/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.1979 - accuracy: 0.9220 - val_loss: 0.0907 - val_accuracy: 0.9752\n",
+            "Epoch 8/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.1862 - accuracy: 0.9266 - val_loss: 0.0698 - val_accuracy: 0.9835\n",
+            "Epoch 9/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.1810 - accuracy: 0.9266 - val_loss: 0.0781 - val_accuracy: 0.9752\n",
+            "Epoch 10/10\n",
+            "14/14 [==============================] - 25s 2s/step - loss: 0.1856 - accuracy: 0.9266 - val_loss: 0.3314 - val_accuracy: 0.8678\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7fc96055b710>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -858,9 +911,9 @@
         "model.save(\"forest1.h5\")"
       ],
       "metadata": {
-        "id": "fItGTuCt9n2v"
+        "id": "k1mDqPByVu7B"
       },
-      "execution_count": 47,
+      "execution_count": 110,
       "outputs": []
     }
   ]
